# pattern_hackathon_forecasting

./: .gitignore  README.md  main.py  pyproject.toml  regen_folds.py
src/: blend.py  build_agg_series.py  build_series.py  core_target.py  device.py  download_data.py  members.py  pipeline.py  promo_realloc.py  residual_stack.py  seasonal_adjust.py
src/models/: chronos2.py  common.py  gbm.py  seqgru.py  timesfm25.py
